@@ -589,3 +589,6 @@ Changes only in Hortonworks github and not in hadoop-2.7.1 and hence not covered
     BUG-46839. HDFS-7725. Incorrect "nodes in service" metrics caused all
     writes to fail. (Ming Ma via wang)
 
+    BUG-46838. HDFS-8950. NameNode refresh doesn't remove DataNodes that are
+    no longer in the allowed list. (Daniel Templeton via cmccabe)
+
